# Copyright (c) Jupyter Development Team.
# Distributed under the terms of the Modified BSD License.

[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_chat"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
description = "A chat extension based on shared documents"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyterlab~=4.0",
    "jupyter_collaboration>=3,<4",
    "jupyter_server>=2.0.1,<3",
    "jupyter_ydoc",
    "pycrdt"
]
keywords = [
    "jupyter",
    "jupyterlab",
    "jupyterlab-extension"
]
authors = [
    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" }
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "coverage",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0"
]

[project.urls]
documentation = "https://jupyter-chat.readthedocs.io/"
homepage = "https://github.com/jupyterlab/jupyter-chat"
"Bug Tracker" = "https://github.com/jupyterlab/jupyter-chat/issues"

[tool.hatch.version]
path = "jupyterlab_chat/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_chat/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_chat/labextension" = "share/jupyter/labextensions/jupyterlab-chat-extension"
"install.json" = "share/jupyter/labextensions/jupyterlab-chat-extension/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_chat/labextension/static/style.js",
    "jupyterlab_chat/labextension/package.json",
]
skip-if-exists = ["jupyterlab_chat/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = ["jlpm"]
path = "../.."
build_cmd = "build:prod"
editable_build_cmd = "install:extension"

[tool.check-wheel-contents]
ignore = ["W002"]

[project.entry-points.jupyter_ydoc]
chat = "jupyterlab_chat.ychat:YChat"
